Fixed an issue where the section-holder overlapped with the footer

--- a/static/styles.css
+++ b/static/styles.css
@@ -70,7 +70,7 @@ body
   padding: 0;
   padding-bottom: 0px;
   margin-top: 12vh;
-  padding-bottom: 9vh;
+  padding-bottom: 7.5vh;
 }
 
 .buttons{
